# trace-gen

./: .gitignore  2DIO_implementation.ipynb  README.md  cloudflare.py  discussion.ipynb  evaluation.ipynb  intro_background.ipynb  meson.build  performance.ipynb  pyproject.toml  real_mrc.ipynb  real_observe.ipynb  sample_combine_addr.ipynb  trace_gen-0.1.0-cp310-cp310-linux_x86_64.whl
figures/: real_mrc.tex
interactive/: f_mrc_server.py  vis_server.py
src/trace_gen/: .gitignore  TraceGenerator.py  TraceReconstructor.py  __init__.py  arc.cpp  arc_wrapper.py  clock.cc  clock.cpp  clock.py  clock3.cc  clock_wrapper.py  fifo.c  fifo.cc  fifo.cpp  fifo.py  fifo_m.cpp  fifo_m_wrapper.py  fifo_wrapper.py  iad.cpp  iad.py  iad_wrapper.py  lfu.cpp  lfu_wrapper.py  lru.cpp  lru_algorithm.md  lru_wrapper.py  min.cpp  min_wrapper.py  misc.py  qfifo.py  ran-clock.cpp  ran-sieve.cpp  ran_clock_wrapper.py  ran_sieve_wrapper.py  rand-clock.cpp  rand_m.cpp  rand_m_wrapper.py  sieve.cpp  sieve_wrapper.py  tracegen.cc  (+2 more)
