[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "wheel", "ninja", "numpy", "pybind11>=2.8.0"]

[project]
name = "trace_gen"
version = "0.1.0"
authors = [
	{  name = "Effy Wang", email = "effywang57@gmail.com" }
]
description = "a I/O trace-generation lib, including four simple cache simulators."
# readme = "README.md"
packages = [
	{ include = "trace_gen", from = "src" },
]
dependencies = [
  "numpy"
]
license = {file = "LICENSE"}